Observable preferences I (Internal [formerly Version], Groups, Xmp, AutoComplete) (#8336)
* Refactored VersionPreferences to InternalPreferences and converted GroupsPreferences to new prefs model

* Converted XmpPreferences to new observable prefs pattern

* Converted AutoCompletePreferences to new observable prefs pattern

* Fixed tests

* Fixed tests

* Fixed tests