@@ -3,7 +3,10 @@ package org.jabref.gui.autocompleter;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
+
+import javafx.collections.FXCollections;
 
 import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.model.database.BibDatabase;
@@ -25,7 +28,7 @@ class FieldValueSuggestionProviderTest {
     private BibDatabase database;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() {
         database = new BibDatabase();
         autoCompleter = new FieldValueSuggestionProvider(StandardField.TITLE, database);
     }
@@ -64,7 +67,7 @@ class FieldValueSuggestionProviderTest {
     void completeOnIgnoredFieldReturnsNothing() {
         AutoCompletePreferences autoCompletePreferences = mock(AutoCompletePreferences.class);
         JournalAbbreviationRepository journalAbbreviationRepository = mock(JournalAbbreviationRepository.class);
-        when(autoCompletePreferences.getCompleteFields()).thenReturn(Set.of(StandardField.AUTHOR));
+        when(autoCompletePreferences.getCompleteFields()).thenReturn(FXCollections.observableSet(Set.of(StandardField.AUTHOR)));
         SuggestionProviders suggestionProviders = new SuggestionProviders(database, journalAbbreviationRepository, autoCompletePreferences);
 
         SuggestionProvider<String> autoCompleter = (SuggestionProvider<String>) suggestionProviders.getForField(StandardField.TITLE);
@@ -84,7 +87,7 @@ class FieldValueSuggestionProviderTest {
         database.insertEntry(entry);
 
         Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testValue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
@@ -94,7 +97,7 @@ class FieldValueSuggestionProviderTest {
         database.insertEntry(entry);
 
         Collection<String> result = autoCompleter.provideSuggestions(getRequest(("test")));
-        assertEquals(Arrays.asList("testValue"), result);
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
@@ -104,7 +107,7 @@ class FieldValueSuggestionProviderTest {
         database.insertEntry(entry);
 
         Collection<String> result = autoCompleter.provideSuggestions(getRequest(("testvalue")));
-        assertEquals(Arrays.asList("testValue"), result);
+        assertEquals(List.of("testValue"), result);
     }
 
     @Test
